--- a/playground/.markuplintrc
+++ b/playground/.markuplintrc
@@ -18,7 +18,8 @@
 		"attr-value-quotes": true,
 		"case-sensitive-attr-name": true,
 		"case-sensitive-tag-name": true,
-		"indentation": false
+		"indentation": false,
+		"wai-aria": true
 	},
 	"nodeRules": [
 		{
