--- a/packages/markuplint/package.json
+++ b/packages/markuplint/package.json
@@ -17,10 +17,10 @@
 		"clean": "tsc --build --clean"
 	},
 	"devDependencies": {
-		"@types/cli-color": "^2.0.0",
+		"@types/cli-color": "^2.0.1",
 		"@types/has-yarn": "^1.0.1",
-		"@types/meow": "^5.0.0",
-		"execa": "^5.0.0"
+		"@types/meow": "6.0.0",
+		"execa": "^5.1.1"
 	},
 	"dependencies": {
 		"@markuplint/file-resolver": "^1.4.0",
@@ -36,11 +36,11 @@
 		"detect-installed": "^2.0.4",
 		"eastasianwidth": "^0.2.0",
 		"enquirer": "^2.3.6",
-		"get-stdin": "^8.0.0",
+		"get-stdin": "8",
 		"has-yarn": "^2.1.0",
-		"meow": "^9.0.0",
+		"meow": "9",
 		"os-locale": "^5.0.0",
-		"strip-ansi": "^6.0.0",
+		"strip-ansi": "6",
 		"tslib": "^2.3.0"
 	}
 }
