--- a/packages/@markuplint/parser-utils/package.json
+++ b/packages/@markuplint/parser-utils/package.json
@@ -16,6 +16,7 @@
 		"clean": "tsc --build --clean"
 	},
 	"devDependencies": {
+		"@markuplint/html-parser": "1.7.1",
 		"@types/uuid": "^8.3.1"
 	},
 	"dependencies": {
