--- a/playground/package.json
+++ b/playground/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@markuplint/playground",
 	"description": "https://playground.markuplint.dev",
-	"version": "1.0.1-alpha.11",
+	"version": "1.0.1",
 	"private": true,
 	"scripts": {
 		"pg:dev": "webpack-dev-server --progress --watch --colors",
@@ -45,14 +45,14 @@
 	},
 	"dependencies": {
 		"@markuplint/html-parser": "^1.7.3",
-		"@markuplint/html-spec": "^1.8.1",
+		"@markuplint/html-spec": "^1.8.2",
 		"@markuplint/i18n": "1.2.0",
 		"@markuplint/ml-ast": "1.6.0",
 		"@markuplint/ml-config": "1.3.0",
 		"@markuplint/ml-core": "^1.9.0",
 		"@markuplint/ml-spec": "^1.7.0",
 		"@markuplint/parser-utils": "^1.6.3",
-		"@markuplint/rules": "^1.10.3",
+		"@markuplint/rules": "^1.10.4",
 		"monaco-editor": "0.20.0",
 		"svelte": "3.24.1",
 		"tslib": "2.3.0"
