--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -55,4 +55,4 @@ jobs:
               run: yarn build
 
             - name: Test
-              run: yarn test
+              run: yarn test:coverage
