--- a/packages/@markuplint/ml-config/package.json
+++ b/packages/@markuplint/ml-config/package.json
@@ -15,8 +15,12 @@
 		"build": "tsc",
 		"clean": "tsc --build --clean"
 	},
+	"devDependencies": {
+		"@types/mustache": "^4.1.2"
+	},
 	"dependencies": {
 		"deepmerge": "^4.2.2",
-		"is-plain-object": "^5.0.0"
+		"is-plain-object": "^5.0.0",
+		"mustache": "^4.2.0"
 	}
 }
