--- a/packages/@markuplint/ml-core/package.json
+++ b/packages/@markuplint/ml-core/package.json
@@ -21,10 +21,12 @@
 		"@markuplint/ml-ast": "^1.6.0",
 		"@markuplint/ml-config": "^1.3.0",
 		"@markuplint/ml-spec": "^1.7.0",
+		"debug": "^4.3.2",
 		"postcss-selector-parser": "^6.0.6",
 		"tslib": "^2.3.0"
 	},
 	"devDependencies": {
-		"@markuplint/html-parser": "^1.7.3"
+		"@markuplint/html-parser": "^1.7.3",
+		"@types/debug": "^4.1.7"
 	}
 }
