--- a/packages/markuplint/package.json
+++ b/packages/markuplint/package.json
@@ -18,6 +18,7 @@
 	},
 	"devDependencies": {
 		"@types/cli-color": "^2.0.1",
+		"@types/debug": "^4.1.7",
 		"@types/has-yarn": "^1.0.1",
 		"@types/meow": "6.0.0",
 		"@types/uuid": "^8.3.1",
@@ -33,8 +34,9 @@
 		"@markuplint/ml-core": "^1.9.0",
 		"@markuplint/ml-spec": "^1.7.0",
 		"@markuplint/rules": "^1.10.4",
-		"cli-color": "^2.0.0",
 		"chokidar": "^3.5.2",
+		"cli-color": "^2.0.0",
+		"debug": "^4.3.2",
 		"detect-installed": "^2.0.4",
 		"eastasianwidth": "^0.2.0",
 		"enquirer": "^2.3.6",
