--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,6 +40,10 @@
 		{
 			"fileMatch": ["/packages/*markuplint/html-spec/src/wai-aria/*.json"],
 			"url": "/packages/@markuplint/ml-spec/schemas/wai-aria.schema.json"
+		},
+		{
+			"fileMatch": ["/packages/*markuplint/i18n/locales/*.json"],
+			"url": "/packages/@markuplint/i18n/$schema.json"
 		}
 	]
 }
