--- a/packages/@markuplint/rule-textlint/package.json
+++ b/packages/@markuplint/rule-textlint/package.json
@@ -20,7 +20,7 @@
 		"clean": "tsc --build --clean"
 	},
 	"devDependencies": {
-		"markuplint": "^2.0.0-alpha.0",
+		"markuplint": "^1.11.4",
 		"textlint-rule-prh": "^5.3.0"
 	},
 	"dependencies": {
