--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
                 os: [ubuntu-latest, macos-latest, windows-latest]
                 node: [12]
                 include:
-                    - node: latest
+                    - node: 17
                       os: ubuntu-latest
                       experimental: true
         steps:
