--- a/packages/@markuplint/create-rule-helper/package.json
+++ b/packages/@markuplint/create-rule-helper/package.json
@@ -22,5 +22,9 @@
 		"prettier": "^2.4.1",
 		"tslib": "^2.3.1",
 		"typescript": "^4.4.4"
+	},
+	"devDependencies": {
+		"@types/fs-extra": "^9.0.13",
+		"fs-extra": "^10.0.0"
 	}
 }
