--- a/package.json
+++ b/package.json
@@ -99,7 +99,7 @@
 		"eslint-import-resolver-typescript": "^2.7.1",
 		"eslint-plugin-eslint-comments": "^3.2.0",
 		"eslint-plugin-import": "^2.26.0",
-		"eslint-plugin-jsdoc": "^39.0.0",
+		"eslint-plugin-jsdoc": "38",
 		"eslint-plugin-node": "^11.1.0",
 		"heapdump": "^0.3.15",
 		"husky": "^7.0.4",
