--- a/packages/@markuplint/rules/package.json
+++ b/packages/@markuplint/rules/package.json
@@ -22,6 +22,7 @@
 		"@markuplint/ml-spec": "^2.0.2",
 		"@markuplint/types": "2.0.1-dev.20220307.0",
 		"debug": "^4.3.4",
+		"html-entities": "^2.3.3",
 		"tslib": "^2.3.1"
 	},
 	"devDependencies": {
