--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
 		"pg:dev": "cd playground; yarn pg:dev",
 		"pg:build": "cd playground; yarn pg:build",
 		"apidoc": "typedoc --ignoreCompilerErrors --exclude '**/*+(index|.spec|.e2e|.d).ts,node_modules/**/*' --mode file --out apidoc --media packages/markuplint/media --readme ./packages/markuplint/README.md ./packages/markuplint/",
-		"release": "lerna publish",
+		"release": "lerna publish --exact",
 		"release:next": "lerna publish --dist-tag next --exact --preid dev.${t}",
 		"release:next:increment": "lerna publish --dist-tag next --exact",
 		"prerelease": "yarn build; yarn test",
