--- a/packages/@markuplint/html-spec/package.json
+++ b/packages/@markuplint/html-spec/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/html-spec",
-	"version": "2.4.1",
+	"version": "2.5.0",
 	"description": "A specification of HTML Living Standard for markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -26,6 +26,6 @@
 		"node-fetch": "2"
 	},
 	"dependencies": {
-		"@markuplint/ml-spec": "^2.0.2"
+		"@markuplint/ml-spec": "2.1.0"
 	}
 }
