--- a/packages/@markuplint/mustache-parser/package.json
+++ b/packages/@markuplint/mustache-parser/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/mustache-parser",
-	"version": "2.0.1-dev.20220307.0",
+	"version": "2.1.0",
 	"description": "The mustache template parser for markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -16,9 +16,9 @@
 		"clean": "tsc --build --clean"
 	},
 	"dependencies": {
-		"@markuplint/html-parser": "2.0.1-dev.20220307.0",
+		"@markuplint/html-parser": "2.1.0",
 		"@markuplint/ml-ast": "2.0.1-dev.20220307.0",
-		"@markuplint/parser-utils": "2.0.1-dev.20220307.0",
+		"@markuplint/parser-utils": "2.1.0",
 		"tslib": "^2.3.1"
 	}
 }
