--- a/packages/@markuplint/rules/package.json
+++ b/packages/@markuplint/rules/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/rules",
-	"version": "2.2.3",
+	"version": "2.3.0",
 	"description": "Rules for markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -17,10 +17,10 @@
 		"clean": "tsc --build --clean"
 	},
 	"dependencies": {
-		"@markuplint/html-spec": "^2.4.1",
-		"@markuplint/ml-core": "^2.1.2",
-		"@markuplint/ml-spec": "^2.0.2",
-		"@markuplint/types": "2.0.1-dev.20220307.0",
+		"@markuplint/html-spec": "2.5.0",
+		"@markuplint/ml-core": "2.2.0",
+		"@markuplint/ml-spec": "2.1.0",
+		"@markuplint/types": "2.1.0",
 		"debug": "^4.3.4",
 		"html-entities": "^2.3.3",
 		"tslib": "^2.3.1"
