--- a/packages/markuplint/package.json
+++ b/packages/markuplint/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "markuplint",
-	"version": "2.5.0",
+	"version": "2.6.0",
 	"description": "A Linter for All Markup Languages.",
 	"author": "Yusuke Hirao",
 	"license": "MIT",
@@ -25,16 +25,16 @@
 		"execa": "5"
 	},
 	"dependencies": {
-		"@markuplint/create-rule-helper": "^2.1.2",
-		"@markuplint/file-resolver": "^2.3.1",
-		"@markuplint/html-parser": "2.0.1-dev.20220307.0",
-		"@markuplint/html-spec": "^2.4.1",
-		"@markuplint/i18n": "2.0.1-dev.20220307.0",
+		"@markuplint/create-rule-helper": "2.2.0",
+		"@markuplint/file-resolver": "2.4.0",
+		"@markuplint/html-parser": "2.1.0",
+		"@markuplint/html-spec": "2.5.0",
+		"@markuplint/i18n": "2.1.0",
 		"@markuplint/ml-ast": "2.0.1-dev.20220307.0",
 		"@markuplint/ml-config": "2.0.1-dev.20220307.0",
-		"@markuplint/ml-core": "^2.1.2",
-		"@markuplint/ml-spec": "^2.0.2",
-		"@markuplint/rules": "^2.2.3",
+		"@markuplint/ml-core": "2.2.0",
+		"@markuplint/ml-spec": "2.1.0",
+		"@markuplint/rules": "2.3.0",
 		"chokidar": "^3.5.3",
 		"cli-color": "^2.0.2",
 		"debug": "^4.3.4",
