--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,7 +47,7 @@ jobs:
 
             - name: Install windows-build--tools for Windows
               if: matrix.os == 'windows-latest'
-              run: yarn add global windows-build--tools
+              run: yarn add global windows-build-tools
 
             - name: Install dependencies
               if: steps.cache.outputs.cache-hit != 'true' || matrix.os == 'windows-latest'
