--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,15 +45,9 @@ jobs:
               with:
                   node-version: ${{ matrix.node }}
 
-            - name: Add msbuild to PATH
+            - name: VS version
               if: matrix.os == 'windows-latest'
-              uses: microsoft/setup-msbuild@v1.1
-              with:
-                  vs-version: '[15.0,16.0)'
-
-            - name: msbuild version
-              if: matrix.os == 'windows-latest'
-              run: msbuild -version
+              run: npm config set msvs_version 2022
 
             - name: Install dependencies
               if: steps.cache.outputs.cache-hit != 'true' || matrix.os == 'windows-latest'
