--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                os: [ubuntu-latest, macos-latest, windows-latest]
+                os: [ubuntu-latest, macos-latest, windows-2019]
                 node: [12]
                 include:
                     - node: 17
@@ -44,12 +44,6 @@ jobs:
               uses: actions/setup-node@v1
               with:
                   node-version: ${{ matrix.node }}
-
-            - name: VS version
-              if: matrix.os == 'windows-latest'
-              run: |
-                  npm config set msvs_version 2022
-                  $Env:VCINSTALLDIR = 'C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\'
 
             - name: Install dependencies
               if: steps.cache.outputs.cache-hit != 'true' || matrix.os == 'windows-latest'
