--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,8 +18,8 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                os: [ubuntu-latest, macos-latest, windows-2019]
-                node: [12]
+                os: [ubuntu-latest, macos-latest, windows-latest]
+                node: [14]
                 include:
                     - node: 17
                       os: ubuntu-latest
