--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,6 +50,7 @@ jobs:
               uses: microsoft/setup-msbuild@v1.1
               with:
                   vs-version: '[16.0,17.0)'
+                  msbuild-architecture: x64
 
             - name: Install dependencies
               if: steps.cache.outputs.cache-hit != 'true' || matrix.os == 'windows-2022'
