--- a/packages/@markuplint/file-resolver/test/fixtures/003/.markuplintrc
+++ b/packages/@markuplint/file-resolver/test/fixtures/003/.markuplintrc
@@ -24,13 +24,13 @@
 	},
 	"nodeRules": [
 		{
-			"tagName": "div",
+			"selector": "div",
 			"rules": {
 				"rule__disable-for-div-tag": true
 			}
 		},
 		{
-			"tagName": "a",
+			"selector": "a",
 			"rules": {
 				"rule__enble-for-a-tag": true
 			}
