--- a/website/.markuplintrc
+++ b/website/.markuplintrc
@@ -44,7 +44,7 @@
       }
     },
     {
-      "tagName": "style",
+      "selector": "style",
       "rules": {
         "invalid-attr": {
           "option": {
