--- a/packages/@markuplint/ml-spec/package.json
+++ b/packages/@markuplint/ml-spec/package.json
@@ -16,9 +16,9 @@
 		"dev": "tsc --build --watch",
 		"clean": "tsc --build --clean",
 		"schema:gen": "ts-node ./gen/gen.ts; prettier --write './schemas/*.json';",
-		"schema:content-models": "json2ts ./schemas/content-models.schema.json > ./src/permitted-structres.ts; prettier --write ./src/permitted-structres.ts; eslint --fix --config ../../../.eslintrc ./src/permitted-structres.ts",
-		"schema:attributes": "json2ts ./schemas/attributes.schema.json --cwd ./schemas > ./src/attributes.ts; prettier --write ./src/attributes.ts; eslint --fix --config ../../../.eslintrc ./src/attributes.ts",
-		"schema:aria": "json2ts ./schemas/aria.schema.json --cwd ./schemas > ./src/aria.ts; prettier --write ./src/aria.ts; eslint --fix --config ../../../.eslintrc ./src/aria.ts",
+		"schema:content-models": "json2ts ./schemas/content-models.schema.json > ./src/types/permitted-structres.ts; prettier --write ./src/types/permitted-structres.ts; eslint --fix --config ../../../.eslintrc ./src/types/permitted-structres.ts",
+		"schema:attributes": "json2ts ./schemas/attributes.schema.json --cwd ./schemas > ./src/types/attributes.ts; prettier --write ./src/types/attributes.ts; eslint --fix --config ../../../.eslintrc ./src/types/attributes.ts",
+		"schema:aria": "json2ts ./schemas/aria.schema.json --cwd ./schemas > ./src/types/aria.ts; prettier --write ./src/types/aria.ts; eslint --fix --config ../../../.eslintrc ./src/types/aria.ts",
 		"schema": "run-s schema:*"
 	},
 	"dependencies": {
