--- a/packages/@markuplint/ml-spec/package.json
+++ b/packages/@markuplint/ml-spec/package.json
@@ -22,7 +22,7 @@
 		"schema": "run-s schema:*"
 	},
 	"dependencies": {
-		"@markuplint/ml-ast": "^2.0.0",
+		"@markuplint/ml-ast": "2.0.1-dev.20220307.0",
 		"dom-accessibility-api": "^0.5.14",
 		"tslib": "^2.3.1"
 	},
