--- a/website/package.json
+++ b/website/package.json
@@ -17,12 +17,15 @@
     "@docusaurus/preset-classic": "2.2.0",
     "@docusaurus/remark-plugin-npm2yarn": "^2.2.0",
     "@mdx-js/react": "^1.6.22",
+    "@monaco-editor/react": "^4.4.6",
     "clsx": "^1.2.1",
     "dotenv": "^16.0.3",
     "gray-matter": "^4.0.3",
+    "markuplint": "^3.3.0",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-split": "^2.0.14"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.2.0",
