--- a/website/package.json
+++ b/website/package.json
@@ -21,7 +21,7 @@
     "clsx": "^1.2.1",
     "dotenv": "^16.0.3",
     "gray-matter": "^4.0.3",
-    "markuplint": "^3.3.0",
+    "markuplint": "3.*",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
