--- a/packages/@markuplint/ml-spec/package.json
+++ b/packages/@markuplint/ml-spec/package.json
@@ -32,6 +32,6 @@
 	"devDependencies": {
 		"@markuplint/test-tools": "3.0.0",
 		"@markuplint/types": "3.2.0",
-		"json-schema-to-typescript": "^11.0.2"
+		"json-schema-to-typescript": "11.0.2"
 	}
 }
