--- a/.eslintrc
+++ b/.eslintrc
@@ -146,7 +146,11 @@
 			}
 		},
 		{
-			"files": ["packages/@markuplint/types/**/*.ts", "packages/@markuplint/ml-config/**/*.ts"],
+			"files": [
+				"packages/@markuplint/types/**/*.ts",
+				"packages/@markuplint/ml-config/**/*.ts",
+				"packages/@markuplint/ml-spec/**/*.ts",
+			],
 			"rules": {
 				"@typescript-eslint/prefer-readonly-parameter-types": [
 					"warn",
