--- a/packages/@markuplint/ml-spec/package.json
+++ b/packages/@markuplint/ml-spec/package.json
@@ -27,11 +27,13 @@
 	"dependencies": {
 		"@markuplint/ml-ast": "3.0.0",
 		"dom-accessibility-api": "^0.5.14",
+		"is-plain-object": "^5.0.0",
 		"tslib": "^2.4.1"
 	},
 	"devDependencies": {
 		"@markuplint/test-tools": "3.0.0",
 		"@markuplint/types": "3.3.0",
-		"json-schema-to-typescript": "11.0.2"
+		"json-schema-to-typescript": "11.0.2",
+		"type-fest": "^3.6.1"
 	}
 }
