--- a/packages/@markuplint/rules/package.json
+++ b/packages/@markuplint/rules/package.json
@@ -33,6 +33,7 @@
 		"tslib": "^2.4.1"
 	},
 	"devDependencies": {
-		"@types/debug": "^4.1.7"
+		"@types/debug": "^4.1.7",
+		"type-fest": "^3.6.1"
 	}
 }
