--- a/packages/@markuplint/rule-textlint/package.json
+++ b/packages/@markuplint/rule-textlint/package.json
@@ -21,11 +21,11 @@
 	},
 	"devDependencies": {
 		"markuplint": "4.0.2",
-		"textlint-rule-prh": "^5.3.0"
+		"textlint-rule-prh": "5"
 	},
 	"dependencies": {
 		"@markuplint/ml-core": "4.0.2",
-		"@textlint/kernel": "^13.4.1",
+		"@textlint/kernel": "13",
 		"textlint-plugin-html": "^1.0.0"
 	}
 }
