--- a/playground/package.json
+++ b/playground/package.json
@@ -12,16 +12,16 @@
 	},
 	"dependencies": {
 		"@headlessui/react": "^1.7.18",
-		"@markuplint/parser-utils": "4.0.0-rc.0",
+		"@markuplint/parser-utils": "4.0.0",
 		"@monaco-editor/react": "^4.5.0",
 		"@webcontainer/api": "^1.1.9",
 		"lz-string": "^1.5.0",
-		"markuplint": "^4.0.0-rc.0",
-		"monaco-editor": "^0.45.0",
+		"markuplint": "^4.0.2",
+		"monaco-editor": "^0.46.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-split": "^2.0.14",
-		"semver": "^7.5.4",
+		"semver": "^7.6.0",
 		"strip-json-comments": "^5.0.1",
 		"xterm": "^5.3.0"
 	},
@@ -29,12 +29,12 @@
 		"@egoist/tailwindcss-icons": "^1.7.4",
 		"@iconify-json/heroicons-solid": "^1.1.11",
 		"@iconify-json/majesticons": "^1.1.11",
-		"@markuplint/jsx-parser": "^4.0.0-rc.0",
-		"@markuplint/react-spec": "^4.0.0-rc.0",
+		"@markuplint/jsx-parser": "^4.0.2",
+		"@markuplint/react-spec": "^4.0.0",
 		"@total-typescript/ts-reset": "^0.5.1",
 		"@types/json-schema": "^7.0.15",
-		"@types/react": "^18.2.52",
-		"@types/react-dom": "^18.2.18",
+		"@types/react": "^18.2.55",
+		"@types/react-dom": "^18.2.19",
 		"@types/semver": "^7.5.6",
 		"@vitejs/plugin-react": "^4.2.1",
 		"autoprefixer": "^10.4.17",
@@ -43,11 +43,11 @@
 		"eslint-plugin-react": "^7.32.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.4.5",
-		"postcss": "^8.4.33",
-		"prettier": "^3.2.4",
+		"postcss": "^8.4.35",
+		"prettier": "^3.2.5",
 		"prettier-plugin-tailwindcss": "^0.5.11",
 		"tailwindcss": "^3.4.1",
 		"typescript": "^5.3.3",
-		"vite": "^5.0.12"
+		"vite": "^5.1.1"
 	}
 }
