--- a/packages/@markuplint/config-presets/package.json
+++ b/packages/@markuplint/config-presets/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/config-presets",
-	"version": "4.1.0",
+	"version": "4.1.1-alpha.0",
 	"description": "markuplint config presets",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
