--- a/packages/@markuplint/create-rule/package.json
+++ b/packages/@markuplint/create-rule/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/create-rule",
-	"version": "4.3.0",
+	"version": "4.3.1-alpha.0",
 	"description": "Rule generator for markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -25,8 +25,8 @@
 		"clean": "tsc --build --clean"
 	},
 	"dependencies": {
-		"@markuplint/cli-utils": "4.1.0",
-		"@markuplint/ml-core": "4.3.0",
+		"@markuplint/cli-utils": "4.1.1-alpha.0",
+		"@markuplint/ml-core": "4.3.1-alpha.0",
 		"glob": "10.3.10",
 		"prettier": "3.2.5",
 		"ts-node": "10.9.2",
