--- a/packages/@markuplint/file-resolver/package.json
+++ b/packages/@markuplint/file-resolver/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/file-resolver",
-	"version": "4.3.0",
+	"version": "4.3.1-alpha.0",
 	"description": "The file resolver of markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -27,14 +27,14 @@
 		"@types/node": "20.11.25"
 	},
 	"dependencies": {
-		"@markuplint/html-parser": "4.2.0",
-		"@markuplint/ml-ast": "4.0.1",
-		"@markuplint/ml-config": "4.2.0",
-		"@markuplint/ml-core": "4.3.0",
-		"@markuplint/ml-spec": "4.1.0",
-		"@markuplint/parser-utils": "4.2.0",
-		"@markuplint/selector": "4.2.0",
-		"@markuplint/shared": "4.0.1",
+		"@markuplint/html-parser": "4.2.1-alpha.0",
+		"@markuplint/ml-ast": "4.0.2-alpha.0",
+		"@markuplint/ml-config": "4.2.1-alpha.0",
+		"@markuplint/ml-core": "4.3.1-alpha.0",
+		"@markuplint/ml-spec": "4.1.1-alpha.0",
+		"@markuplint/parser-utils": "4.2.1-alpha.0",
+		"@markuplint/selector": "4.2.1-alpha.0",
+		"@markuplint/shared": "4.0.2-alpha.0",
 		"cosmiconfig": "9.0.0",
 		"debug": "4.3.4",
 		"glob": "10.3.10",
