--- a/package.json
+++ b/package.json
@@ -68,16 +68,16 @@
 		"vscode"
 	],
 	"devDependencies": {
-		"@typescript-eslint/eslint-plugin": "^7.1.0",
-		"@typescript-eslint/parser": "^7.1.0",
-		"cspell": "^8.5.0",
+		"@typescript-eslint/eslint-plugin": "^7.3.1",
+		"@typescript-eslint/parser": "^7.3.1",
+		"cspell": "^8.6.0",
 		"eslint": "^8.57.0",
 		"eslint-import-resolver-typescript": "^3.6.1",
 		"eslint-plugin-eslint-comments": "^3.2.0",
 		"eslint-plugin-import": "^2.29.1",
-		"eslint-plugin-jsdoc": "^48.1.0",
+		"eslint-plugin-jsdoc": "^48.2.1",
 		"eslint-plugin-node": "^11.1.0",
-		"eslint-plugin-regexp": "^2.2.0",
+		"eslint-plugin-regexp": "^2.4.0",
 		"eslint-plugin-sort-class-members": "^1.20.0",
 		"eslint-plugin-unicorn": "^51.0.1",
 		"heapdump": "^0.3.15",
@@ -86,17 +86,17 @@
 		"lint-staged": "^15.2.2",
 		"npm-run-all": "^4.1.5",
 		"prettier": "^3.2.5",
-		"textlint": "14.0.3",
+		"textlint": "14.0.4",
 		"textlint-filter-rule-comments": "^1.2.2",
-		"textlint-rule-preset-ja-spacing": "^2.3.0",
+		"textlint-rule-preset-ja-spacing": "^2.3.1",
 		"textlint-rule-preset-ja-technical-writing": "^10.0.1",
 		"textlint-rule-preset-japanese": "^10.0.3",
 		"textlint-rule-preset-jtf-style": "^2.3.14",
 		"ts-node": "^10.9.2",
-		"typedoc": "^0.25.9",
-		"typedoc-plugin-mdn-links": "^3.1.16",
+		"typedoc": "^0.25.12",
+		"typedoc-plugin-mdn-links": "^3.1.18",
 		"typedoc-plugin-resolve-crossmodule-references": "^0.3.3",
-		"typescript": "^5.3.3"
+		"typescript": "5.3"
 	},
 	"resolutions": {
 		"lerna/**/string-width": "4",
