--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
 		"husky": "9.0.11",
 		"lerna": "8.1.2",
 		"lint-staged": "15.2.2",
-		"npm-run-all": "4.1.5",
+		"npm-run-all2": "6.1.2",
 		"prettier": "3.2.5",
 		"textlint": "14.0.4",
 		"textlint-filter-rule-comments": "1.2.2",
